changes after review